# AndroidOpenCVDemo

./: import-summary.txt  readme.md
app/: CMakeLists.txt  CMakeLists_old.txt  build.gradle
app/src/androidTest/java/indoor/sysu/mobile/limk/opencvtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/vlfeat/: vlfeat.cmake
app/src/main/java/indoor/sysu/mobile/limk/opencvtest/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/indoor/sysu/mobile/limk/opencvtest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary249/: build.gradle
